# hamming-rust

./: Cargo.toml  README.md
benches/: encoding_benchmark.rs
src/: main.rs
src/cli/: enums.rs  mod.rs
src/encoding/: bitvec.rs  hamming.rs  mod.rs
src/proto/: mod.rs
src/utils/: log.rs  misc.rs  mod.rs
