[package]
name = "hamming_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
clap = { version = "4.5.35", features = ["derive"] }
colog = "1.3.0"
colored = "3.0.0"
env_logger = "0.11.8"
log = "0.4.27"
rayon = "1.8.0"
rand = "0.9"
serde = { version = "1.0.219", features = ["derive"] }
serde_plain = "1.0.2"
termcolor = "1.4.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "encoding_benchmark"
harness = false
